# evidence-grounded-drug-safety-decision-support-assistant

./: .env.example  .gitignore  README.md  model_card.md  prompt_registry.yaml  pyproject.toml
data/: drug_list.txt
docs/: architecture.md  governance.md  production_scaling.md
evaluation/benchmarks/: benchmark_schema.json  sample_benchmark.jsonl  synthetic_100.jsonl  synthetic_3000.jsonl
evaluation/scripts/: benchmark_nvidia_extract_models.py  generate_synthetic_benchmark.py  run_eval.py
prompts/v1/: general_safety_template.md  interaction_template.md  pregnancy_template.md  refusal_template.md  renal_template.md
prompts/v2/: general_safety_template.md  interaction_template.md  pregnancy_template.md  refusal_template.md  renal_template.md
scripts/: build_corpus_from_drug_list.py  build_persistent_index.py  start_full_project.sh
skills/custom-retrieval/: SKILL.md
src/drug_safety_assistant/: __init__.py  app.py  config.py  evidence.py  generation.py  hallucination.py  intents.py  prompts.py  question_engine.py  risk_scoring.py  types.py
src/drug_safety_assistant/llm/: __init__.py  claude.py  dynamic_prompting.py  judge.py  nvidia_extractor.py
src/drug_safety_assistant/pipeline/: orchestrator.py
src/drug_safety_assistant/retrieval/: __init__.py  agentic.py  (+8 more)
tests/: test_agentic_retrieval.py  test_clinical_text.py  test_drug_resolver.py  test_dynamic_prompting.py  test_hallucination.py  test_llm_judge.py  test_nvidia_extractor.py  test_persistent_index.py  test_question_engine.py  test_retrieval_filter.py  test_risk_scoring.py  test_vector_index.py
(+2 files in other folders)
